# omni-compiler-1

./: configure.ac
C-FrontEnd/src/: c-acc-pragma.c  c-acc-xcodeml.c  c-acc.h
Driver/etc/: ompcc.conf.in
Driver/libexec/: omni_pzcc.sh  ompcc_lib.sh
F-FrontEnd/src/: F-compile.c  F-datatype.c
F-FrontEnd/test/testdata/: issue545.f90  issue550.f90  issue579.f90
XcodeML-Exc-Tools/src/exc/openacc/: ACC.java  ACCglobalDecl.java  ACCgpuDecompileWriter.java  ACCgpuDecompiler.java  AccDevice.java  AccKernel.java  AccManager.java
XcodeML-Exc-Tools/src/exc/util/: omompx.java
libacc/include/: Makefile.am  acc.h  acc_gpu.h  acc_gpu_func.hpp  acc_gpu_internal.h  acc_internal.h  acc_internal_cl.h  acc_pezy.h  acc_pezy.hpp  acc_pezy_reduction.hpp  acc_pezy_util.hpp
libacc/src/: Makefile.am  acc.c  acc_cl.c  acc_cuda_util.c  acc_kernel_cl.c  acc_mpool_cl.c  acc_mpool_cuda.c  acc_queue_cl.c  acc_queue_cuda.c  acc_queue_map.c  acc_runtime.c
